--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="action_settings">Configuracion</string>
+    <string name="strUsu">Usuario:</string>
+    <string name="strPass">Contraseña:</string>
+    <string name="btnLogin">Ingresar</string>
+    <string name="title_activity_verificacion">Verificación</string>
+    <string name="strProgress">Autenticando...</string>
+    <string name="bad_usr">Autenticación incorrecta</string>
 </resources>
