--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -10,4 +10,6 @@
     <string name="strUri">Archivo:</string>
     <string name="strCarga">Cargar Archivo</string>
     <string name="strCargaIniciada">Carga Iniciada</string>
+    <string name="strCargaCompleta">Carga Completada</string>
+    <string name="strFolder">Carpeta:</string>
 </resources>
