--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
         <item>Videos</item>
     </string-array>
     <string name="strCargaIniciada">Starting Upload</string>
+    <string name="strCargaCompleta">Upload Complete</string>
+    <string name="strFolder">Folder:</string>
 
 
 </resources>
